# open_ai_test

./: .env.sample  pyproject.toml
open_ai_test/github_api/: api.py  get_all_pull_request_messages.py  get_source_code.py
open_ai_test/open_ai_api/: api.py
